--- a/index.Rmd
+++ b/index.Rmd
@@ -121,5 +121,12 @@ rmarkdown::render('LAB5.Rmd', 'word_document')
 ### Field Trips
 # We will be taking 1-2 field trips to collect wildlife population data. One field trip will be full-day, on a weekend: bring breakfast, lunch, and plenty of water. Bring any appropriate gear for spending the day in the field including: binoculars, spotting scopes, and field guides, and wear appropriate clothing for hiking. Be prepared for inclement weather.
 
+
+## UPCOMING
+
+- metapopulations
+- source sink
+
+
 ```
 
