--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -32,7 +32,7 @@ Students will work in groups of ~2-3 people to perform a population viability an
 ## Timeline
 
 - **PROPOSAL:** Due March 3!
-- **PVA FULLY PARAMETERIZED** Due March 24: description of how your PVA model works and where the parameter estimates come from.
+- **PVA FULLY PARAMETERIZED** Due March 31: description of how your PVA model works and where the parameter estimates come from.
 - **DRAFT FINAL PAPER:** Due April 14
 - **FINAL FINAL PAPER:** Due May 5
 - **FINAL PRESENTATIONS:** May 5 in lab
@@ -50,14 +50,11 @@ Your project proposal will consist of:
 3. **Project rationale**: Describe the rationale for choosing this species and management/conservation question. Be as specific as possible! Convince your instructors that your project is **interesting**!    
 4. **Data sources**: Describe what data/information sources you plan to use to guide PVA construction and parameterization. Convince your instructors that your project is **possible**!  
 
-**NOTE about data sources:** The most important parameters you need for a PVA model are *survival rates* (usually age-structured), *fecundity rates* (often age-structured as well), *stochasticity* (variability in those vital rates), *abundance*, and *carrying capacity*. We have gone over all these concepts in class already- PVA is just a way of putting all these concepts together in a single model! You can either get these parameter estimates directly from the published literature (or unpublished reports), or you estimate these parameters yourself using raw data (which we haven't yet gone over in class). If all else fails, you can use published records for similar species!
-
+**NOTE about data sources:** The most important parameters you need for a PVA model are *survival rates* (usually age-structured), *fecundity rates* (often age-structured as well), *stochasticity* (variability in those vital rates), *abundance*, *dispersal rates*, and *carrying capacity*. We have gone over all these concepts in class already- PVA is just a way of putting all these concepts together in a single model! You can either get these parameter estimates directly from the published literature (or unpublished reports), or you estimate these parameters yourself using raw data (which we haven't yet gone over in class). If all else fails, you can use published records for similar species!
 
 ## Potentially useful links!
 
-# Data links
-
-## Publicly available datasets, potentially for final project...  
+Publicly available datasets, potentially for final project...  
 (many links courtesy Tom Langen) 
 
 ### BIODIVERSITY DATA CLEARINGHOUSES /ARCHIVES
