--- a/LECTURE10.Rmd
+++ b/LECTURE10.Rmd
@@ -40,7 +40,15 @@ In general, models are tools- you should use the model structure that best fits 
 
 And also, if two different model structures are equally appropriate, you should usually use the **simplest approach**! This idea is often called the *Principle of Parsimony* (or, *Occam's Razor*). 
 
-**Q**: All populations are composed of individuals. Why then don't we always model populations using individual-based models?
+Both IBM and PBM can be used to address questions at the population or metapopulation level
+
+#### Rules of thumb
+
+- In general, you should use IBM if your *primary information at the individual level* (e.g., telemetry data)-- allowing you to build informed models of how individuals interact with members of their own species, possibly other species, and their local environment -- in which case the principle of parsimony dictates that you should build models at the individual level!
+
+- You should use PBM if your *primary information is at the population level* (e.g., the results of most mark-recapture analyses) -- in which case the principle of parsimony dictates that you should build models at the population level!
+
+**Q**: All populations are composed of individuals. Why then don't we always model populations using individual-based models? (this could be a good exam question...)
 
 ![](occam1.jpg)
 
@@ -55,26 +63,26 @@ _Individual-based models are powerful- but with power comes great responsibility
 
 ## Demo: Individual-based models!
 
-The goal of this activity is to build a mechanistic, individual-based model (IBM) of a (made-up) ecological system. 
+The goal of this activity is to build a mechanistic, individual-based model (IBM) of a (real, not made-up by my postdoc I swear!) ecological system. 
 
 ### The scenario
-The laphlag island archipelago is famous for its dramatic slopes, lush green grass, and its native sheep, the laphlag island bighorn. About 50 years ago, the native island wolf population was hunted to extinction by ranchers, to prevent any wolf predation on their precious livestock. 
+The *laphlag island* archipelago is famous for its dramatic slopes, lush green grass, and its native sheep, the laphlag island bighorn. About 50 years ago, the native island wolf population was hunted to extinction by ranchers, to prevent any wolf predation on their precious livestock. 
 
-However, without wolves, populations of the native sheep skyrocketed, and the famous lush green grass is quickly being lost to overgrazing by the native sheep. 
+However, without wolves, populations of the native sheep skyrocketed, and the famous laphlagian lush green grass is quickly being lost to overgrazing by the native sheep. 
 
 The locals now realize: *They need to reintroduce wolves to the islands*!
 
 You have been hired as a research ecologist to help the locals and biologists address the following questions:
 
-- How are reintroduced wolves going to affect grass biomass and distribution? 
+- How are reintroduced wolves likely to affect grass biomass and distribution? 
 
-- How many wolves are needed to effectively restore lush green grass to the islands?
+- How many wolves are needed to effectively restore that characteristic lush green grass to the islands?
 
 The local management agency is about to start an experimental wolf reintroduction, but they want to know what to expect before making the final decision to go ahead with it.  
 
-They give you some information to get a first guess but promise that you’ll be able to come study the experimental setup once it’s underway.
+They give you some information to get a first guess but they promise that you’ll be able to come study the experimental setup once it’s underway.
 
-The hypothesis is that presence of wolves affects sheep population and behavior in such a way that grass growth is promoted.
+The hypothesis is that presence of wolves affects sheep populations in such a way that grass growth is promoted.
 
 
 ![](sheep1.png)
@@ -82,13 +90,13 @@ The hypothesis is that presence of wolves affects sheep population and behavior 
 
 ### The details!
 
-The enclosure is deployed after the breeding season and the experiment is run for 100 days. 
+The enclosure is deployed after the breeding season and the experiment is run for 365 days. 
 
 #### Sheep
 
 - There are a total of 50 sheep in the experimental enclosure
 - Each sheep eats 0.2 units of grass per day
-- Each sheep gives birth to 3 lambs approximately every 20 days of the experiment.
+- Each sheep gives birth to 3 lambs approximately every 100 days of the experiment.
 - Sheep tend to stay in place unless either they run out of food to eat or there is a wolf in the vicinity
 
 #### Wolves
@@ -97,24 +105,24 @@ The enclosure is deployed after the breeding season and the experiment is run fo
 - Wolves are solitary hunters, at least on this imaginary island!
 - Wolves have a 10% probability of finding and killing any sheep within 500 m of its location in any given day.
 - Wolves tend to move approximately 500 m per day on average. 
-- Wolves can kill a maximum of one sheep a day. 
+- Wolves can kill a maximum of one sheep a day.
+- Wolves give birth with a probability of 1% per day. 
 
 #### Grass
 
-- The experimental enclosure is one large grassy pasture. For the purposes of this exercise, we will this pasture into a grid of approximately 100 units. Each unit starts off with 10 units of grass (enough to support 50 sheep for a day). 
-- Each grass unit can have a maximum of 15 units of grass. 
-- Each unit can grow approximately 0.05 units of grass per day. 
-
+- The experimental enclosure is one large grassy pasture. For the purposes of this exercise, we will turn this pasture into a grid of approximately 100 equivalent plots. Each plot starts off with 10 units of grass (enough to support 50 sheep for a day). 
+- Each grass plot can have a maximum of 15 units of grass. 
+- Each plot can grow approximately 0.1 units of grass per day. 
 
 
 ### In-class exercise:
 
 First, go to InsightMaker and load up the demo individual-based model! [Here is the link!](https://insightmaker.com/insight/74158/ICE-Individual-based-model).
 
-1) Make sure you can run the model and interpret the figures. 
+1) Make sure you can run the model and interpret the resulting figures. 
 
 2) Try to adjust the number of sheep and wolves to meet your management goals: 
-    - Maintain populations of both sheep and wolves
+    - Maintain viable populations of both sheep and wolves
     - Maintain lush grass!
 
 3) Does the model behave realistically?  Test it! What happens if you start with lots of sheep and no wolves? What happens if you start with no sheep, and a bunch of wolves? 
@@ -125,7 +133,7 @@ First, go to InsightMaker and load up the demo individual-based model! [Here is 
 
 6) What if grass were more productive? Try doubling the "Grass Growth Rate" and see if more sheep can be supported sustainably. 
 
-7) What if the wolves don't actually kill the sheep, but just scare them (make them move)?? Does the presence of wolves affect grass growth in this case?
+7) What if the wolves don't actually kill the sheep, but just scare them (make them move)?? Does the presence of wolves affect grass growth in this case? (hint- you might need to set sheep birth rate to 0 to see an effect)
 
 
 **Q**: is there any stochasticity in this model? If so, what kind of stochasticity is there? Take an educated guess!
