--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -13,7 +13,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Becuase this is the first time this course is being taught, this schedule is highly subject to change!!! Please check for updates frequently!
+Because this is the first time this course is being taught, this schedule is highly subject to change!!! Please check for updates frequently!
 
 ```{r include=FALSE}
 courseSchedule <- read.csv("CourseSchedule.csv")
