--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -32,7 +32,7 @@ Students will work in groups of ~2-3 people to perform a population viability an
 ## Timeline
 
 - **PROPOSAL:** Due March 3!
-- **PVA FULLY PARAMETERIZED** Due March 31: description of how your PVA model works and where the parameter estimates come from.
+- **INITIAL PVA** Due March 31: description of how your PVA model works and where the parameter estimates come from.
 - **DRAFT FINAL PAPER:** Due April 14
 - **FINAL FINAL PAPER:** Due May 5
 - **FINAL PRESENTATIONS:** May 5 in lab
@@ -51,6 +51,18 @@ Your project proposal will consist of:
 4. **Data sources**: Describe what data/information sources you plan to use to guide PVA construction and parameterization. Convince your instructors that your project is **possible**!  
 
 **NOTE about data sources:** The most important parameters you need for a PVA model are *survival rates* (usually age-structured), *fecundity rates* (often age-structured as well), *stochasticity* (variability in those vital rates), *abundance*, *dispersal rates*, and *carrying capacity*. We have gone over all these concepts in class already- PVA is just a way of putting all these concepts together in a single model! You can either get these parameter estimates directly from the published literature (or unpublished reports), or you estimate these parameters yourself using raw data (which we haven't yet gone over in class). If all else fails, you can use published records for similar species!
+
+## Second project-related assignment: the initial PVA!
+
+(Due March 3...) 
+
+Your inital parameterized PVA will consist of:  
+
+1. A ready-to-run PVA model, in whatever software framework you are using (Vortex, InsightMaker, R). This model does not need to be the "final" model, but it should work (e.g., produce results) and the parameter estimates should be reasonable and backed by evidence (see below).
+
+2. A description of parameter estimates and rationale/evidence for these estimates. 
+    a. For each major decision you made in constructing the model, describe the information you used to back up your decision (and the source of this information). Decisions include: how many populations, how many stages, how density-dependence operates for your species, allee effects, survival and fecundity rates, environmental stochasticity, catastrophes, etc. Where appropriate, feel free to embed figures, maps, etc. from your information sources.
+    b. Literature cited (format not important, as long as it includes all key information).
 
 ## Potentially useful links!
 
