--- a/index.Rmd
+++ b/index.Rmd
@@ -13,8 +13,6 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
 
-[Quiz #2](https://unr.instructure.com/courses/15896/quizzes/24149)
-
 **Instructor:** Kevin Shoemaker   
 **Teaching Assistant** Margarete Walden   
 **Office**: FA 220E			 		 
@@ -121,6 +119,7 @@ rmarkdown::render('LAB6.Rmd', 'word_document')
 
 
 ## [Quiz #1](https://unr.instructure.com/courses/15896/quizzes/21572)
+## [Quiz #2](https://unr.instructure.com/courses/15896/quizzes/24149)
 
 ### Field Trips
 # We will be taking 1-2 field trips to collect wildlife population data. One field trip will be full-day, on a weekend: bring breakfast, lunch, and plenty of water. Bring any appropriate gear for spending the day in the field including: binoculars, spotting scopes, and field guides, and wear appropriate clothing for hiking. Be prepared for inclement weather.
